# sirene-server

./: .gitignore  .gitmodules  README.md  openapi.yml  pyproject.toml
app/: __init__.py  config.yaml  exec.py  initialization.py  logger.py
app/domains/: midi.py  play_music_params.py
app/domains/music/: __init__.py
app/domains/server/: server.py  server_repository_interface.py
app/infra/: fileLookup.py  file_lookup.py  frontend_loader.py  player.py  responses.py  serialConnector.py  serial_connector.py
app/repositories/: initialization.py  server.py
app/routers/: __init__.py  frontend.py  music.py  note.py  status.py  websocket.py
app/usecases/: get_server_status.py
arduino/driver/: driver.ino  finger.h
arduino/driver_nexgen/: driver_nexgen.ino  finger.h
arduino/dutyTester/: dutyTester.ino  finger.h
